--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                     <p>Learn</p>
                 </div>
                 <div class="info">
+                    <p>Contact</p>
                     <p>Press</p>
                     <p>Support</p>
                 </div>
@@ -155,6 +156,7 @@
                 </div>
             </div>
           </section>
+          <!-- FOOTER -->
           <footer>
             <p>	&copy; Copyright 2022 NFTlanding</p>
             <p>Launching August 2022</p>
