--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="price-2">
                     <p>TOP BID</p>
-                    <p>2.99 ETH</p>
+                    <p><img src="/images/eth.svg" alt="eth"> 2.99 ETH</p>
                     <p>1 day left</p>
                 </div>
             </div>
@@ -75,7 +75,7 @@
                     </div>
                     <div class="price-2">
                         <p>TOP BID</p>
-                        <p>2.99 ETH</p>
+                        <p><img src="/images/eth.svg" alt="eth"> 2.99 ETH</p>
                         <p>1 day left</p>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                         </div>
                         <div class="price-2">
                             <p>TOP BID</p>
-                            <p>2.99 ETH</p>
+                            <p><img src="/images/eth.svg" alt="eth"> 2.99 ETH</p>
                             <p>1 day left</p>
                         </div>
                     </div>
@@ -101,7 +101,7 @@
                             </div>
                             <div class="price-2">
                                 <p>TOP BID</p>
-                                <p>2.99 ETH</p>
+                                <p><img src="/images/eth.svg" alt="eth"> 2.99 ETH</p>
                                 <p>1 day left</p>
                             </div>
                         </div>
